# image_detector_pkg

./: image_det.sh  install.sh  launch_image_detector  package.xml  setup.cfg  setup.py
config/: config.yaml
image_detector_pkg/: image_detector_node.py  projection_node.py
launch/: image_detector.launch.py
