<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_detector_pkg</name>
  <version>0.0.1</version>
  <description>The implementation of a 2d detector for humans using a YOLO model.</description>
  <maintainer email="ernestoroque777@gmail.com">ernstmv</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Dependencia de launch para ejecutar nodos en el sistema de lanzamiento -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
